--- a/app/src/main/res/layout/activity_layout_manager.xml
+++ b/app/src/main/res/layout/activity_layout_manager.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".LayoutManager">
+    tools:context=".LayoutManagerActivity">
 
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/tabLayout"
