--- a/app/src/main/res/layout/activity_complain.xml
+++ b/app/src/main/res/layout/activity_complain.xml
@@ -30,7 +30,7 @@
             android:textSize="18sp" />
 
         <EditText
-            android:id="@+id/user_name"
+            android:id="@+id/editTextuser_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
@@ -47,7 +47,7 @@
             android:textSize="18sp" />
 
         <EditText
-            android:id="@+id/email"
+            android:id="@+id/editTextemail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
@@ -64,7 +64,7 @@
             android:textSize="18sp" />
 
         <EditText
-            android:id="@+id/crime_spot"
+            android:id="@+id/editTextcrime_spot"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
@@ -82,7 +82,7 @@
             android:textSize="18sp" />
 
         <EditText
-            android:id="@+id/pincode"
+            android:id="@+id/editTextpincode"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
@@ -99,7 +99,7 @@
             android:textSize="18sp" />
 
         <EditText
-            android:id="@+id/description"
+            android:id="@+id/editTextdescription"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
@@ -117,7 +117,7 @@
             android:textSize="18sp" />
 
         <EditText
-            android:id="@+id/category"
+            android:id="@+id/editTextcategory"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
@@ -134,7 +134,7 @@
             android:textSize="18sp" />
 
         <EditText
-            android:id="@+id/date_of_incident"
+            android:id="@+id/editTextdate_of_incident"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
@@ -151,7 +151,7 @@
             android:textSize="18sp" />
 
         <EditText
-            android:id="@+id/time_of_incident"
+            android:id="@+id/editTexttime_of_incident"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
@@ -170,6 +170,14 @@
             android:layout_marginBottom="30dp"
             android:text="@string/submitReport"
             android:textColor="@color/white" />
+
+        <ProgressBar
+            android:id="@+id/progressBar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:visibility="gone" />
 
     </LinearLayout>
 </ScrollView>
