--- a/app/src/main/res/layout/activity_complain.xml
+++ b/app/src/main/res/layout/activity_complain.xml
@@ -60,6 +60,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/crime_spot"
+            android:inputType="textMultiLine"
+            android:lines="5"
             android:textColor="@color/editText"
             android:textSize="18sp" />
 
@@ -104,9 +106,8 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
             android:background="@xml/input"
-            android:ems="10"
             android:inputType="textMultiLine"
-            android:lines="7"
+            android:lines="5"
             android:padding="10dp" />
 
         <TextView
