--- a/app/src/main/res/layout/activity_layout_manager.xml
+++ b/app/src/main/res/layout/activity_layout_manager.xml
@@ -10,7 +10,7 @@
         android:id="@+id/tabLayout"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:background="#1db995"
+        android:background="@color/purple_700"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
