--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -238,6 +238,7 @@
             android:layout_marginBottom="10dp"
             android:background="@xml/input"
             android:inputType="date"
+            android:imeOptions="actionDone"
             android:padding="10dp" />
 
         <Button
@@ -257,7 +258,7 @@
             android:layout_marginTop="15dp"
             android:gravity="center"
             android:textAllCaps="false"
-            android:textSize="20sp"
+            android:textSize="15sp"
             android:text="@string/already_have_account"
             android:textColor="@color/blue_500"
             android:backgroundTint="@color/white" />
