--- a/app/src/main/res/layout/activity_complain.xml
+++ b/app/src/main/res/layout/activity_complain.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="20dp"
     tools:context=".ComplainActivity">
 
     <LinearLayout
@@ -190,11 +191,11 @@
 
         <ProgressBar
             android:id="@+id/progressBar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:backgroundTint="@color/editText"
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
             android:visibility="gone" />
-
     </LinearLayout>
 </ScrollView>
