--- a/app/src/main/res/layout/activity_add_admin.xml
+++ b/app/src/main/res/layout/activity_add_admin.xml
@@ -5,20 +5,49 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="20dp"
-    tools:context=".LoginActivity">
+    tools:context=".admin.AdminLoginActivity">
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:text="@string/login"
+        android:text="@string/add_admin"
         android:textColor="@color/blue_500"
         android:textSize="35sp"
+        android:layout_marginTop="20dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toTopOf="@id/tvEmail"/>
+
+    <TextView
+        android:id="@+id/textViewPolicaStationName"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:text="Police Station Name"
+        android:textColor="@color/editText"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toTopOf="@id/editTextPoliceStationName"
+        app:layout_constraintLeft_toLeftOf="@+id/textView"
+        app:layout_constraintRight_toRightOf="@+id/textView"
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
+
+    <EditText
+        android:id="@+id/editTextPoliceStationName"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:background="@xml/input"
+        android:hint="Enter police station name"
+        android:inputType="text"
+        android:padding="10dp"
+        android:imeOptions="actionNext"
+        app:layout_constraintBottom_toTopOf="@id/tvEmail"
+        app:layout_constraintLeft_toLeftOf="@+id/textView"
+        app:layout_constraintRight_toRightOf="@+id/textView"
+        app:layout_constraintTop_toBottomOf="@+id/textViewPolicaStationName" />
 
     <TextView
         android:id="@+id/tvEmail"
@@ -30,7 +59,7 @@
         android:textSize="18sp"
         app:layout_constraintLeft_toLeftOf="@+id/textView"
         app:layout_constraintRight_toRightOf="@+id/textView"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        app:layout_constraintTop_toBottomOf="@+id/editTextPoliceStationName" />
 
     <EditText
         android:id="@+id/editTextLoginEmail"
@@ -57,10 +86,10 @@
         app:layout_constraintLeft_toLeftOf="@+id/textView"
         app:layout_constraintRight_toRightOf="@+id/textView"
         app:layout_constraintTop_toBottomOf="@+id/editTextLoginEmail"
-        tools:ignore="MissingConstraints" />
+        app:layout_constraintBottom_toTopOf="@id/editTextAdminpassword"/>
 
     <EditText
-        android:id="@+id/editTextLoginpassword"
+        android:id="@+id/editTextAdminpassword"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
@@ -73,19 +102,37 @@
         app:layout_constraintLeft_toLeftOf="@+id/textView"
         app:layout_constraintRight_toRightOf="@+id/textView"
         app:layout_constraintTop_toBottomOf="@+id/tvPassword"
-        tools:ignore="MissingConstraints" />
+        app:layout_constraintBottom_toTopOf="@id/tvCPassword"/>
 
-    <CheckBox
-        android:id="@+id/checkboxShowPassword"
+    <TextView
+        android:id="@+id/tvCPassword"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Show Password"
-        android:textSize="15sp"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="10dp"
+        android:text="@string/cpassword"
+        android:textColor="@color/editText"
+        android:textSize="18sp"
         app:layout_constraintLeft_toLeftOf="@+id/textView"
         app:layout_constraintRight_toRightOf="@+id/textView"
-        app:layout_constraintBottom_toTopOf="@+id/buttonLogin"
-        app:layout_constraintTop_toBottomOf="@id/editTextLoginpassword"/>
+        app:layout_constraintTop_toBottomOf="@+id/editTextAdminpassword"
+        app:layout_constraintBottom_toTopOf="@id/editTextConfirmPassword" />
+
+    <EditText
+        android:id="@+id/editTextConfirmPassword"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:background="@xml/input"
+        android:ems="10"
+        android:hint="Enter confirm password"
+        android:imeOptions="actionDone"
+        android:inputType="textPassword"
+        android:padding="10dp"
+        app:layout_constraintLeft_toLeftOf="@+id/textView"
+        app:layout_constraintRight_toRightOf="@+id/textView"
+        app:layout_constraintTop_toBottomOf="@+id/tvCPassword"
+        tools:ignore="MissingConstraints" />
+
 
     <Button
         android:id="@+id/buttonLogin"
@@ -93,88 +140,23 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
         android:background="@xml/button"
-        android:text="@string/login"
+        android:text="@string/sign_in"
         android:textAllCaps="false"
         android:textColor="@color/white"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintLeft_toLeftOf="@+id/textView"
         app:layout_constraintRight_toRightOf="@+id/textView"
-        app:layout_constraintTop_toBottomOf="@+id/checkboxShowPassword" />
+        app:layout_constraintTop_toBottomOf="@+id/editTextConfirmPassword" />
 
-    <TextView
-        android:id="@+id/tvForgotPassword"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:gravity="center"
-        android:text="@string/forgot_password"
-        android:textColor="@color/blue_500"
-        android:textSize="15sp"
-        app:layout_constraintLeft_toLeftOf="@+id/textView"
-        app:layout_constraintRight_toRightOf="@+id/textView"
-        app:layout_constraintTop_toBottomOf="@+id/buttonLogin" />
-
-    <TextView
-        android:id="@+id/textviewAuthenticationFail"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:gravity="center"
-        android:text="Heloo"
-        android:visibility="gone"
-        android:textColor="@color/teal_200"
-        android:textSize="15sp"
-        app:layout_constraintLeft_toLeftOf="@+id/textView"
-        app:layout_constraintRight_toRightOf="@+id/textView"
-        app:layout_constraintTop_toBottomOf="@+id/tvForgotPassword"
-        tools:ignore="MissingConstraints" />
 
     <ProgressBar
         android:id="@+id/progressBar"
-        android:layout_width="15dp"
-        android:layout_height="15dp"
-        android:backgroundTint="@color/editText"
-        app:layout_constraintTop_toBottomOf="@id/tvForgotPassword"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:visibility="gone" />
-    <LinearLayout
-        android:id="@+id/linarLayoutAccount"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@+id/buttonLogin"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:orientation="vertical">
-        <TextView
-            android:id="@+id/textViewSign"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:text="@string/no_account"
-            android:textColor="@color/blue_500"
-            android:textSize="15sp" />
-
-        <TextView
-            android:id="@+id/textViewAdminPanel"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:gravity="center"
-            android:layout_marginBottom="10dp"
-            android:text="@string/admin_login"
-            android:textColor="@color/blue_500"
-            android:textSize="15sp" />
-
-    </LinearLayout>
+        android:visibility="gone" />
 </androidx.constraintlayout.widget.ConstraintLayout>
-
-    
-
-    
-
-    
-
-    
