--- a/app/src/main/res/layout/activity_admin_login.xml
+++ b/app/src/main/res/layout/activity_admin_login.xml
@@ -5,14 +5,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="20dp"
-    tools:context=".LoginActivity">
+    tools:context=".admin.AdminLoginActivity">
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:text="@string/login"
+        android:text="@string/admin_login"
         android:textColor="@color/blue_500"
         android:textSize="35sp"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -130,51 +130,27 @@
         app:layout_constraintTop_toBottomOf="@+id/tvForgotPassword"
         tools:ignore="MissingConstraints" />
 
-    <ProgressBar
-        android:id="@+id/progressBar"
-        android:layout_width="15dp"
-        android:layout_height="15dp"
-        android:backgroundTint="@color/editText"
-        app:layout_constraintTop_toBottomOf="@id/tvForgotPassword"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:visibility="gone" />
-    <LinearLayout
-        android:id="@+id/linarLayoutAccount"
+    <TextView
+        android:id="@+id/textViewSign"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text="@string/no_account"
+        android:textColor="@color/blue_500"
+        android:textSize="15sp"
+        android:layout_marginTop="350dp"
+        app:layout_constraintTop_toBottomOf="@id/textviewAuthenticationFail"
+        app:layout_constraintBottom_toTopOf="@+id/textViewAdminPanel"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:orientation="vertical">
-        <TextView
-            android:id="@+id/textViewSign"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:text="@string/no_account"
-            android:textColor="@color/blue_500"
-            android:textSize="15sp" />
-
-        <TextView
-            android:id="@+id/textViewAdminPanel"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:gravity="center"
-            android:layout_marginBottom="10dp"
-            android:text="@string/admin_login"
-            android:textColor="@color/blue_500"
-            android:textSize="15sp" />
-
-    </LinearLayout>
+        android:visibility="gone" />
 </androidx.constraintlayout.widget.ConstraintLayout>
-
-    
-
-    
-
-    
-
-    
