--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginTop="14dp"
         android:orientation="vertical"
         android:padding="20dp">
@@ -238,6 +238,23 @@
             android:layout_marginBottom="10dp"
             android:background="@xml/input"
             android:inputType="date"
+            android:imeOptions="actionNext"
+            android:padding="10dp" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/adharCard"
+            android:textColor="@color/editText"
+            android:textSize="18sp" />
+
+        <EditText
+            android:id="@+id/editTextAdharCard"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+            android:background="@xml/input"
+            android:inputType="text"
             android:imeOptions="actionDone"
             android:padding="10dp" />
 
