--- a/app/src/main/res/layout/activity_status.xml
+++ b/app/src/main/res/layout/activity_status.xml
@@ -14,7 +14,7 @@
         android:inputType="textPersonName"
         android:ems="10"
         android:layout_marginTop="85dp"
-        android:id="@+id/edittext_victimid"
+        android:id="@+id/edittextVictimId"
         android:hint="Enter id"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" />
@@ -24,8 +24,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
-        android:id="@+id/viewfir"
-        android:layout_below="@+id/edittext_victimid"
+        android:id="@+id/buttonViewFir"
+        android:layout_below="@+id/edittextVictimId"
         android:layout_centerHorizontal="true" />
 
     <TextView
@@ -47,5 +47,15 @@
         android:layout_marginTop="53dp"
         android:id="@+id/textView7"
         android:textSize="18sp" />
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:visibility="gone" />
 
 </LinearLayout>
