--- a/app/src/main/res/layout/activity_add_admin.xml
+++ b/app/src/main/res/layout/activity_add_admin.xml
@@ -14,12 +14,11 @@
         android:gravity="center"
         android:text="@string/add_admin"
         android:textColor="@color/blue_500"
-        android:textSize="35sp"
-        android:layout_marginTop="20dp"
+        android:textSize="30sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/tvEmail"/>
+        app:layout_constraintBottom_toTopOf="@id/textViewPolicaStationName"/>
 
     <TextView
         android:id="@+id/textViewPolicaStationName"
@@ -59,10 +58,11 @@
         android:textSize="18sp"
         app:layout_constraintLeft_toLeftOf="@+id/textView"
         app:layout_constraintRight_toRightOf="@+id/textView"
-        app:layout_constraintTop_toBottomOf="@+id/editTextPoliceStationName" />
+        app:layout_constraintTop_toBottomOf="@+id/editTextPoliceStationName"
+        app:layout_constraintBottom_toTopOf="@id/editTextAdminEmail"/>
 
     <EditText
-        android:id="@+id/editTextLoginEmail"
+        android:id="@+id/editTextAdminEmail"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
@@ -73,7 +73,8 @@
         android:imeOptions="actionNext"
         app:layout_constraintLeft_toLeftOf="@+id/textView"
         app:layout_constraintRight_toRightOf="@+id/textView"
-        app:layout_constraintTop_toBottomOf="@+id/tvEmail" />
+        app:layout_constraintTop_toBottomOf="@+id/tvEmail"
+        app:layout_constraintBottom_toTopOf="@id/tvPassword"/>
 
     <TextView
         android:id="@+id/tvPassword"
@@ -85,7 +86,7 @@
         android:textSize="18sp"
         app:layout_constraintLeft_toLeftOf="@+id/textView"
         app:layout_constraintRight_toRightOf="@+id/textView"
-        app:layout_constraintTop_toBottomOf="@+id/editTextLoginEmail"
+        app:layout_constraintTop_toBottomOf="@+id/editTextAdminEmail"
         app:layout_constraintBottom_toTopOf="@id/editTextAdminpassword"/>
 
     <EditText
@@ -131,11 +132,11 @@
         app:layout_constraintLeft_toLeftOf="@+id/textView"
         app:layout_constraintRight_toRightOf="@+id/textView"
         app:layout_constraintTop_toBottomOf="@+id/tvCPassword"
-        tools:ignore="MissingConstraints" />
+        app:layout_constraintBottom_toTopOf="@id/buttonAddAdmin"/>
 
 
     <Button
-        android:id="@+id/buttonLogin"
+        android:id="@+id/buttonAddAdmin"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
@@ -152,8 +153,8 @@
 
     <ProgressBar
         android:id="@+id/progressBar"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
         app:layout_constraintTop_toBottomOf="@+id/buttonLogin"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent"
