--- a/app/src/main/res/layout/activity_display_complain.xml
+++ b/app/src/main/res/layout/activity_display_complain.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -9,8 +9,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        tools:ignore="MissingConstraints">
+        android:orientation="vertical">
 
         <TableLayout
             android:layout_width="match_parent"
@@ -198,6 +197,18 @@
                     android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />
 
             </TableRow>
+
+            <TableRow>
+                <TextView
+                    android:text="*Remember the ID given above for future use.(if you are viewing this FIR 1sst time.)"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="53dp"
+                    android:id="@+id/textView7"
+                    android:textStyle="bold"
+                    android:textColor="@color/red"
+                    android:textSize="18sp" />
+            </TableRow>
         </TableLayout>
         <Button
             android:id="@+id/buttonBack"
@@ -205,6 +216,8 @@
             android:layout_height="wrap_content"
             android:textAllCaps="false"
             android:textSize="20sp"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="20dp"
             android:text="Back" />
     </LinearLayout>
-</androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
