--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:text="@string/login"
-        android:textColor="@color/blue_500"
+        android:textColor="@color/purple_500"
         android:textSize="35sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -80,6 +80,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="Show Password"
+        android:buttonTint="@color/purple_500"
         android:textSize="15sp"
         android:layout_marginTop="5dp"
         app:layout_constraintLeft_toLeftOf="@+id/textView"
@@ -109,7 +110,7 @@
         android:layout_marginTop="10dp"
         android:gravity="center"
         android:text="@string/forgot_password"
-        android:textColor="@color/blue_500"
+        android:textColor="@color/purple_500"
         android:textSize="15sp"
         app:layout_constraintLeft_toLeftOf="@+id/textView"
         app:layout_constraintRight_toRightOf="@+id/textView"
@@ -121,9 +122,9 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:gravity="center"
-        android:text="Heloo"
+        android:text=""
         android:visibility="gone"
-        android:textColor="@color/teal_200"
+        android:textColor="@color/red"
         android:textSize="15sp"
         app:layout_constraintLeft_toLeftOf="@+id/textView"
         app:layout_constraintRight_toRightOf="@+id/textView"
@@ -132,14 +133,15 @@
 
     <ProgressBar
         android:id="@+id/progressBar"
-        android:layout_width="15dp"
-        android:layout_height="15dp"
-        android:backgroundTint="@color/editText"
-        app:layout_constraintTop_toBottomOf="@id/tvForgotPassword"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:indeterminateTint="@color/progressColor"
+        android:visibility="gone"
+        android:layout_marginLeft="120dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:visibility="gone" />
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tvForgotPassword" />
     <LinearLayout
         android:id="@+id/linarLayoutAccount"
         android:layout_width="0dp"
@@ -154,7 +156,7 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:text="@string/no_account"
-            android:textColor="@color/blue_500"
+            android:textColor="@color/purple_500"
             android:textSize="15sp" />
 
         <TextView
@@ -165,7 +167,7 @@
             android:gravity="center"
             android:layout_marginBottom="10dp"
             android:text="@string/admin_login"
-            android:textColor="@color/blue_500"
+            android:textColor="@color/purple_500"
             android:textSize="15sp" />
 
     </LinearLayout>
