--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,7 +19,7 @@
             android:layout_marginBottom="30dp"
             android:gravity="center"
             android:text="@string/sign_in"
-            android:textColor="@color/blue_500"
+            android:textColor="@color/purple_500"
             android:textSize="35sp" />
 
         <TextView
@@ -36,7 +36,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
             android:background="@xml/input"
-            android:ems="10"
+            android:hint="Enter First Name"
             android:inputType="text"
             android:padding="10dp" />
 
@@ -53,7 +53,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
             android:background="@xml/input"
-            android:ems="10"
+            android:hint="Enter Middle Name"
             android:inputType="text"
             android:padding="10dp" />
 
@@ -69,8 +69,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
+            android:hint="Enter Last Name"
             android:background="@xml/input"
-            android:ems="10"
             android:inputType="text"
             android:padding="10dp" />
 
@@ -87,7 +87,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
             android:background="@xml/input"
-            android:ems="10"
+            android:hint="Enter Email"
             android:inputType="textEmailAddress"
             android:padding="10dp" />
 
@@ -104,7 +104,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
             android:background="@xml/input"
-            android:ems="10"
+            android:hint="Enter Password"
             android:inputType="textPassword"
             android:padding="10dp" />
 
@@ -120,8 +120,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
+            android:hint="Enter Confirm Password"
             android:background="@xml/input"
-            android:ems="10"
             android:inputType="textPassword"
             android:padding="10dp" />
 
@@ -138,7 +138,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
             android:background="@xml/input"
-            android:ems="10"
+            android:hint="Enter Phone No."
             android:inputType="phone"
             android:padding="10dp" />
 
@@ -155,7 +155,7 @@
             android:layout_height="100dp"
             android:layout_marginBottom="10dp"
             android:background="@xml/input"
-            android:ems="10"
+            android:hint="Enter Address"
             android:inputType="textMultiLine"
             android:padding="10dp" />
 
@@ -172,7 +172,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
             android:background="@xml/input"
-            android:ems="10"
+            android:hint="Enter City"
             android:inputType="text"
             android:padding="10dp" />
 
@@ -189,7 +189,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
             android:background="@xml/input"
-            android:ems="10"
+            android:hint="Enter Pincode"
             android:inputType="number"
             android:padding="10dp" />
 
@@ -238,6 +238,7 @@
             android:layout_marginBottom="10dp"
             android:background="@xml/input"
             android:inputType="date"
+            android:hint="Enter Birthdate"
             android:imeOptions="actionNext"
             android:padding="10dp" />
 
@@ -255,6 +256,7 @@
             android:layout_marginBottom="10dp"
             android:background="@xml/input"
             android:inputType="text"
+            android:hint="Enter Adhar Card No."
             android:imeOptions="actionDone"
             android:padding="10dp" />
 
@@ -268,7 +270,7 @@
             android:textSize="20sp"
             android:textColor="@color/white" />
 
-        <Button
+        <TextView
             android:id="@+id/btnLogin"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -277,15 +279,13 @@
             android:textAllCaps="false"
             android:textSize="15sp"
             android:text="@string/already_have_account"
-            android:textColor="@color/blue_500"
+            android:textColor="@color/purple_500"
             android:backgroundTint="@color/white" />
 
         <ProgressBar
             android:id="@+id/progressBar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_centerVertical="true"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
             android:visibility="gone" />
     </LinearLayout>
 </ScrollView>
