--- a/app/src/main/res/layout/activity_display_complain.xml
+++ b/app/src/main/res/layout/activity_display_complain.xml
@@ -12,7 +12,7 @@
         android:orientation="vertical">
 
         <TableLayout
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content">
 
             <TableRow>
@@ -29,8 +29,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:padding="10dp"
-                    android:text="1"
-                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />
+                    android:text="User"
+                    android:textColor="@color/black" />
 
             </TableRow>
 
@@ -198,18 +198,16 @@
 
             </TableRow>
 
-            <TableRow>
-                <TextView
-                    android:text="*Remember the ID given above for future use.(if you are viewing this FIR 1sst time.)"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="53dp"
-                    android:id="@+id/textView7"
-                    android:textStyle="bold"
-                    android:textColor="@color/red"
-                    android:textSize="18sp" />
-            </TableRow>
         </TableLayout>
+        <TextView
+            android:text="*Remember the ID given above for future use.(if you are viewing this FIR 1sst time.)"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:id="@+id/textView7"
+            android:textStyle="bold"
+            android:textColor="@color/red"
+            android:textSize="18sp" />
         <Button
             android:id="@+id/buttonBack"
             android:layout_width="match_parent"
