--- a/app/src/main/res/layout/activity_admin_login.xml
+++ b/app/src/main/res/layout/activity_admin_login.xml
@@ -80,6 +80,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="Show Password"
+        android:buttonTint="@color/purple_500"
         android:textSize="15sp"
         android:layout_marginTop="5dp"
         app:layout_constraintLeft_toLeftOf="@+id/textView"
