--- a/app/src/main/res/layout/activity_add_admin.xml
+++ b/app/src/main/res/layout/activity_add_admin.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -69,7 +70,6 @@
         android:background="@xml/input"
         android:hint="Enter email"
         android:inputType="textEmailAddress"
-        android:padding="10dp"
         android:imeOptions="actionNext"
         app:layout_constraintLeft_toLeftOf="@+id/textView"
         app:layout_constraintRight_toRightOf="@+id/textView"
@@ -95,7 +95,6 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:background="@xml/input"
-        android:ems="10"
         android:hint="Enter password"
         android:imeOptions="actionDone"
         android:inputType="textPassword"
